Reduce container height to avoid scrollbars

--- a/filter.css
+++ b/filter.css
@@ -1,6 +1,6 @@
 div {
   display: flex;
-  height: 100vh;
+  height: 90vh;
   justify-content: center;
   align-items: center;
 }
